# SmartLMS

./: .env.example  .gitignore  ASSESSMENT_ENGINE_IMPLEMENTATION.md  ASSESSMENT_ENGINE_STATUS.md  COMMUNICATION_MODULE_STATUS.md  COURSE_GROUPS_IMPLEMENTATION.md  COURSE_MANAGEMENT_IMPLEMENTATION.md  COURSE_MANAGEMENT_NEXT_STEPS.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MODULES_18_23_24_IMPLEMENTATION.md  Makefile  PHASE10_AUTOMATION_GAMIFICATION_COMPLETE.md  PHASE15_WEBSOCKET_ENHANCED_SUMMARY.md  PHASE15_WEBSOCKET_ENHANCEMENT_PLAN.md  PHASE16_17_API_ROUTES_COMPLETE.md  PHASE16_17_DEVELOPER_PLATFORM_COMPLETE.md  PHASE16_17_ENHANCEMENTS_COMPLETE.md  PHASE16_17_ENHANCEMENT_PLAN.md  PHASE16_17_FRONTEND_COMPLETE.md  PHASE16_SUMMARY.md  PHASE17_DEVELOPER_PLATFORM_COMPLETE.md  PHASE18_IOT_SMART_CAMPUS_COMPLETE.md  PHASE18_SUMMARY.md  PHASE9_SUMMARY.md  PHASES_14_15_16_COMPLETE.md  PHASES_14_15_SUMMARY.md  PHASE_2_6_9_IMPLEMENTATION.md  PHASE_3_AI_ASSISTANT_IMPLEMENTATION.md  README.md  WEEK1_PROGRESS.md  WEEK2_PROGRESS.md  WEEK3_PROGRESS.md  WEEK4_PROGRESS.md  WEEK5_PROGRESS.md  WEEKS_6_7_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  smartlms_master_reference.md
.agents_tmp/: PLAN.md
.github/workflows/: ci.yml  release.yml
infrastructure/helm/smartlms/: Chart.yaml  values.yaml
infrastructure/kubernetes/: database.yaml  deployment.yaml  ingress.yaml
infrastructure/nginx/: nginx.conf
infrastructure/nginx/conf.d/: default.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/ssl/: generate-certs.sh  server.crt  server.key
migrations/: 011_iot_smart_campus.sql
smartlms-backend/: BLOCKCHAIN_CERTIFICATES_README.md  Cargo.toml  Dockerfile  IOT_ADVANCED_README.md  IOT_IMPLEMENTATION.md  IOT_README.md  PHASE11_ADVANCED_ACADEMIC_COMPLETE.md  PHASE18_VERIFICATION_CHECKLIST.md  PHASES_15_18_SUMMARY.md  WEBSOCKET_README.md
smartlms-backend/migrations/: 001_master_schema.sql  003_assessment_engine.sql  004_communication_module.sql  005_developer_platform.sql  006_advanced_academic.sql  006_automation_gamification.sql  007_iot_integration.sql  007_phases_14_15_16.sql  008_blockchain_certificates.sql  009_phase16_enhancements.sql  010_phase17_developer_platform.sql  011_course_management.sql  012_modules_18_23_24.sql
smartlms-backend/migrations_institution/: 001_users_and_rbac.sql  002_courses_and_enrollments.sql  003_assessments.sql
smartlms-backend/src/: lib.rs  main.rs
smartlms-backend/src/api/: abac.rs  advanced_academic.rs  ai_assistant.rs  analytics.rs  api_analytics.rs  assessments.rs  auth.rs  automation.rs  blockchain.rs  clearance.rs  code_sandbox.rs  communication.rs  compliance.rs  course_groups.rs  courses.rs  developer.rs  employer.rs  enrollments.rs  exam_cards.rs  fees.rs  gamification.rs  institutions.rs  iot.rs  iot_advanced.rs  library.rs  live.rs  marketplace.rs  mobile.rs  mobile_enhanced.rs  mod.rs  oauth.rs  parents_alumni.rs  playground.rs  sdk.rs  timetable.rs  upgrade.rs  users.rs  vpat.rs  websocket.rs
smartlms-backend/src/api/graphql/: mod.rs
smartlms-backend/src/api/routes/: assessments.rs  auth.rs  courses.rs  enrollments.rs  institutions.rs  mod.rs  users.rs
smartlms-backend/src/db/: abac.rs  assessment.rs  attendance.rs  backup.rs  communication.rs  course.rs  course_group.rs  enrollment.rs  institution.rs  iot.rs  live.rs  mod.rs  module_db.rs  parents_alumni.rs  question.rs  refresh_token.rs  role.rs  user.rs
smartlms-backend/src/middleware/: auth.rs  mod.rs  tenant.rs
smartlms-backend/src/models/: abac.rs  assessment.rs  attendance.rs  auth.rs  backup.rs  communication.rs  course.rs  course_group.rs  enrollment.rs  institution.rs  iot.rs  live.rs  mod.rs  onboarding.rs  parents_alumni.rs  user.rs
smartlms-backend/src/services/: abac.rs  academic.rs  ai_learning.rs  ai_learning_impl.rs  ai_proctoring.rs  analytics.rs  api_analytics.rs  assessment.rs  assessments.rs  attendance.rs  auth.rs  automation.rs  backup.rs  blockchain.rs  certificate.rs  clearance.rs  communication.rs  compliance.rs  course.rs  course_builder.rs  courses.rs  developer.rs  domain.rs  edge_computing.rs  employer.rs  fee.rs  gamification.rs  grading.rs  import_.rs  iot.rs  jwt.rs  library.rs  license.rs  live.rs  marketplace.rs  migration.rs  migration_lms.rs  ml.rs  mod.rs  mqtt.rs  (+23 more)
smartlms-backend/src/services/code_sandbox/: mod.rs
smartlms-backend/src/tenant/: context.rs  mod.rs
smartlms-backend/src/utils/: app_state.rs  mod.rs
smartlms-backend/src/workers/: webhook_worker.rs
smartlms-backend/tests/: integration.rs
smartlms-frontend/: index.html  package-lock.json  package.json
smartlms-frontend/src/: App.tsx  index.css
smartlms-ml/: Dockerfile  Project.toml  README.md  docker-entrypoint.sh
smartlms-ml/src/: SmartLMSML.jl
smartlms-proctoring/: README.md
smartlms-proctoring/src/: proctoring.js
smartlms-sdk/: package.json  tsconfig.json
smartlms-sdk/src/: index.ts  types.ts
src/workers/: iot_worker.rs
(+105 files in other folders)
