[package]
name = "smartlms-backend"
version = "0.1.0"
edition = "2021"
description = "SmartLMS Engine - Learning Management System Backend"

[features]
default = ["custom-linkage"]
custom-linkage = []

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "postgres", "uuid", "chrono", "json"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
once_cell = "1"
dashmap = "5"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smartlms-server"
path = "src/main.rs"