[package]
name = "smartlms-backend"
version = "0.1.0"
edition = "2021"
description = "SmartLMS Engine - Learning Management System Backend"

[features]
default = ["custom-linkage"]
custom-linkage = []

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "postgres", "uuid", "chrono", "json"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"

# Security
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid"] }

# HTTP client for SSO
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF Generation
printpdf = "0.7"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
once_cell = "1"
dashmap = "5"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenv = "0.15"

# Redis (multi-tenant cache-miss path; see tenant::context::RouterState)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# MQTT Client
rumqttc = "0.24"

# Edge Computing & Message Queue
tokio-stream = "0.1"
flume = "0.11"

# Machine Learning for Predictive Maintenance
linfa = "0.7"
linfa-trees = "0.7"
ndarray = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smartlms-server"
path = "src/main.rs"