[package]
name = "smartlms-backend"
version = "0.2.0"
edition = "2021"
description = "SmartLMS Engine - Learning Management System Backend"

[features]
default = []

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "ipnetwork", "migrate", "rust_decimal"] }

# Redis — cache-miss path for the tenant router
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"
# Refresh-token generation (CSPRNG) and SHA-256 of the token-at-rest.
rand = "0.8"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Fixed-precision decimals (grades, money)
rust_decimal = { version = "1", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
dashmap = "5"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smartlms-server"
path = "src/main.rs"
